[tool.poetry]
name = "betnotifbot"
version = "0.1.0"
description = ""
authors = ["LilDrugHill <smookigrow@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
fake-useragent = "^1.1.3"
bs4 = "^0.0.1"
selenium = "^4.8.3"
lxml = "^4.9.2"
aiogram = "^2.25.1"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
